# boiler

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md  boiler  oldboiler  settings.py  settings.sh
boilerplates/: ockty
boilerplatesinfo/: berdogez.txt  dirboiler.txt
boilerplatesrunscripts/: berdogez.bash  dirboiler.bash
old_python_scripts/: settings.py
old_python_scripts/utils/: helpers.py
src/: .gitignore  GNUmakefile  Makefile  boiler.cc  configfile.cc  configfile.h  errors.cc  errors.h  input.cc  input.h  printutils.cc  printutils.h
src/nlohmann_json/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  nlohmann_jsonTargets.cmake
utils/: helpers.py
